test/tests/compiler/14_pointers/valid/plx1_nil_is_false.plx
pub fn main(none) i32 {
    a: *i32 = nil
    b: bool = nil
    
    return a or (b ~= false)
}
