test/tests/compiler/14_pointers/invalid_types/invalid_static_initializer.plx
#  It's illegal to initialize a static pointer with a non-pointer value 
x: *i32 = 10

pub fn main(none) i32 {
    return 0
}
